force-app/main/default/objects/Cost_Sheet_Field_Config__mdt/Cost_Sheet_Field_Config__mdt.object-meta.xml
<CustomObject>
    <label>Cost Sheet Field Config</label>
    <pluralLabel>Cost Sheet Field Configs</pluralLabel>
</CustomObject>