force-app/main/default/objects/Cost_Sheet_Field_Config__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>