force-app/main/default/objects/Cost_Sheet_Field_Config__mdt/fields/Is_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>