force-app/main/default/objects/Cost_Sheet_Field_Config__mdt/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>