force-app/main/default/objects/Cost_Sheet_Field_Config__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>